# wiki-connect

./: .gitignore  README.md  api_server.py  extended_memory.py  grounded_memory.py  imagen_client.py  ingestion_experiments.py  linkup_client.py  modal_wiki_ingest.py  multimodal_ingestion.py  parquet_ingestion.py  pyproject.toml  requirements.txt  vercel.json
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/connect/: route.ts
frontend/src/app/api/connect/stream/: route.ts
frontend/src/app/api/copilotkit/: route.ts
frontend/src/app/api/experiments/: route.ts
frontend/src/app/api/feedback/: route.ts
frontend/src/app/api/generate-image/: route.ts
frontend/src/app/api/metrics/: route.ts
frontend/src/lib/: embeddings.ts  gemini.ts  linkup.ts  qdrant.ts
